# Vocabulary-Chatbot

./: .env  .gitignore  README.md  chatbot.py  pyproject.toml
